reactstrap and api platform integration

--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ APP_SECRET=97edd4bc79cfa7e6a9f25e0e355a15a4
 DATABASE_URL="mysql://root:@127.0.0.1:3306/COSAPpfe"
 
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
